Change order of exercise

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 tests/tests.xcodeproj/project.xcworkspace/xcuserdata/fer.xcuserdatad/UserInterfaceState.xcuserstate
+tests/tests.xcodeproj/project.xcworkspace/xcuserdata/fer.xcuserdatad/UserInterfaceState.xcuserstate
